--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,17 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
 
-    <!--<android.support.design.widget.TabLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--app:tabBackground="@drawable/tab_selector"-->
-        <!--app:tabGravity="center"-->
-        <!--app:tabIndicatorHeight="0dp"-->
-        <!--android:id="@+id/tl_indicator" />-->
-    
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_listView"
+    <com.viewpagerindicator.CirclePageIndicator
+        android:id="@+id/indicator"
         android:layout_width="match_parent"
-        android:layout_height="216dp" />
+        android:layout_height="10dp"
+        android:layout_alignBottom="@+id/vp_viewPager"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="18dp"/>
 
-</LinearLayout>
+</RelativeLayout>
