--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,12 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
 
-    <com.viewpagerindicator.CirclePageIndicator
-        android:id="@+id/indicator"
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:layout_alignBottom="@+id/vp_viewPager"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="18dp"/>
+    <com.rd.PageIndicatorView
+        android:id="@+id/rbIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        app:piv_animationType="none"
+        app:piv_selectedColor="#5884e5"
+        app:piv_unselectedColor="#c9c9c9"
+        app:piv_radius="4dp"
+        app:piv_padding="15dp" />
 
-</RelativeLayout>
+</LinearLayout>
